--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Html 01 lecture</title>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image/x-icon" href="http://cdn.onlinewebfonts.com/svg/img_212716.png">
+        <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
 
     <body>
-        <h1>Hello World</h1>
+        <img src="images/kibe.jpg" alt="kibe" />
+
+        <div class="padding-example">
+            
+            <h1>Hello World</h1>
+        </div>
+        <h2>Hello World</h2>
+        <h3>Hello World</h3>
+        <h4>Hello World</h4>
+        <h5>Hello World</h5>
+        <h6>Hello World</h6>
+
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora
+            eum deserunt aut magnam ipsum dolor quo? Tempora culpa incidunt
+            beatae vitae placeat nihil? Reiciendis dolores laboriosam rem, ipsum
+            fugiat recusandae.
+        </p>
+        
+        <a href="https://www.google.com/" target="_blank">Go to google</a>
+        <a href="pages/contact.html" target="_self">Go to contact page</a>
     </body>
 </html>
